Fixed mockup spacing and prototype link

--- a/style/styles.css
+++ b/style/styles.css
@@ -1309,6 +1309,7 @@ small {
 .visual_design .mockups_four {
   padding-top: 0;
 }
+
 .mockups {
   padding-top: 3rem;
 }
@@ -2244,10 +2245,6 @@ text-align: left;
 
 .IA_intro .white_title {
   margin-bottom: 3rem;
-}
-
-.visual_design .mockups_four {
-  padding-top: 3rem;
 }
 
 
